<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/app_icon_two"/>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/appIcon"
        android:text="@string/pack_your_bag"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="#cd853f"/>

    <TextView
        android:layout_marginTop="70dp"
        android:layout_below="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/from"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:id="@+id/txtFrom"/>
    
    <TextView
        android:id="@+id/txtAbdullah"
        android:layout_below="@+id/txtFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abdullah_imran"
        android:textSize="25sp"
        android:textColor="#cd853f"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtPakistan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAbdullah"
        android:text="@string/pakistan_zindabad"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#006400"/>





</RelativeLayout>